--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dateformat": "^3.0.2",
+    "fast-csv": "^2.4.1",
     "imap": "^0.8.19",
     "imap-simple": "^3.2.0"
   }
